--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li class="header__links-list-item"> <a class="header__link" href="#">об аукционе</a></li>
         </ul>
       </nav>
-      <a class="header__logo"> <img src="./images/logo-black.svg" class="header__logo-image"></a>
+      <a class="header__logo"> <img src="./images/logo-black.svg" class="header__logo-image" alt="Логотип сайта"></a>
       <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -100,15 +100,15 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#"><img class="footer__social-icon" src="./images/yt.svg">
+          <a class="footer__social-link" href="#"><img class="footer__social-icon" src="./images/yt.svg" alt="Значок Youtube">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#"><img class="footer__social-icon" src="./images/vk.svg">
+          <a class="footer__social-link" href="#"><img class="footer__social-icon" src="./images/vk.svg" alt="Значок Вконтакте">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#"><img class="footer__social-icon" src="./images/pinterest.svg">
+          <a class="footer__social-link" href="#"><img class="footer__social-icon" src="./images/pinterest.svg" alt="Значок Пинтерест">
           </a>
         </li>
       </ul>
