--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </section>
       <section class="about">
         <div class="about__column">
-          <div class="about__logo"><img src="./images/logo-white.svg"></div>
+          <div class="about__logo"><img src="./images/logo-white.svg" alt="Логотип сайта"></div>
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
